Update from https://github.com/Labae/BehaviorTree/commit/b09d05ec63b0b1de88c87aa3f250326f261dafab

--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "sitemap": {
     "fileOptions": {
       "api/*": {
+        "baseUrl": "https://labae.github.io/BehaviorTreeDoc/",
         "changefreq": "daily"
       }
     },
@@ -11,7 +12,438 @@
   "homepages": [],
   "source_base_path": "D:/a/BehaviorTree/BehaviorTree/Documentation",
   "xrefmap": "xrefmap.yml",
-  "files": [],
+  "files": [
+    {
+      "type": "Resource",
+      "output": {
+        "resource": {
+          "relative_path": "index.json"
+        }
+      },
+      "is_incremental": false
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.BehaviorTreeEditor.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.BehaviorTreeEditor.html",
+          "hash": "FrTo5oJL96jDjbM3jm5J0C8vWEY4TKbt7cMJKRqfnTk="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.BehaviorTreeView.UxmlFactory.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.BehaviorTreeView.UxmlFactory.html",
+          "hash": "h7HOOXQS6oasY3oETzsTTyZJY+K89oWIWDoVnMCZ1f8="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.BehaviorTreeView.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.BehaviorTreeView.html",
+          "hash": "EiG0F98N0MojksCVhxgoyEyyEP45Ic2seHtoQWwG9P4="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.InspectorView.UxmlFactory.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.InspectorView.UxmlFactory.html",
+          "hash": "DaYoufjZMWMZYw1Cj61FKbzcbI8mDgUY1jRMazyJw6s="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.InspectorView.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.InspectorView.html",
+          "hash": "VcxV0olCzgUweIV3fMBWK29ytBf+ug1dtrSS2duNXxw="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.NodeView.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.NodeView.html",
+          "hash": "ct+xQpTWwTphhiMCPE3CiFJ/p9Hg8ADV9Rl1WitA97g="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.SplitView.UxmlFactory.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.SplitView.UxmlFactory.html",
+          "hash": "XQ3jB1pPxaVf1pWj75i89c9HINtnD/7zh/TmUHpkKqk="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.SplitView.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.SplitView.html",
+          "hash": "f+KA5/HqdIQmUiVAEU7HK2ZkR+fGCIZC+lZWcts/nkk="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.html",
+          "hash": "KPdRI/28/kDEEmOfuSiMiXsIcjAbTkvq7PxGiCsWAi8="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.BehaviorTreeAgent.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.BehaviorTreeAgent.html",
+          "hash": "c5zap0yKkbn0CO/hYy3DulHoWr9GuDQEZfCsqZ44vL8="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.BehaviorTreeSO.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.BehaviorTreeSO.html",
+          "hash": "/B2G3vefDa/mgVcxzwRGRo68iFzFA0F9LlojrCYmWnc="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Actions.ActionNode.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Actions.ActionNode.html",
+          "hash": "J25dSAsoLlsx1ITUziq2ufB3TCVzmYywyyBdmeDWDBQ="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Actions.DebugLogNode.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Actions.DebugLogNode.html",
+          "hash": "flEEupnXc6hOaF9CuxxyoCenQiu7V09OF8mav9D2mZA="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Actions.WaitNode.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Actions.WaitNode.html",
+          "hash": "9wK0tLVZG/Jz/Bk+FgJNHqWIBttBJenxRupcBsV/S+M="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Actions.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Actions.html",
+          "hash": "78seWitvklPOB/HZVMhPxfYzX/y9LCpom4qm9QMYx2M="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Composites.CompositeNode.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Composites.CompositeNode.html",
+          "hash": "C/DIafORMI8HC6hMFwm2WiqErdaR5RnaMVosNT4nJP8="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Composites.SequencerNode.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Composites.SequencerNode.html",
+          "hash": "Z9rQVs3c/ExguNAKFSIDkB3LcZ5fPUSlyQqhk2OQHlQ="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Composites.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Composites.html",
+          "hash": "baWoqjqzxDXtNGjoesdyk440JalVqUKDEC5D+wiLCYY="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Decorators.DecoratorNode.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Decorators.DecoratorNode.html",
+          "hash": "LCjw+2e2xMKV8Ke2Nj/SbFo8bCx3c5uLTEHPMbWUJ30="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Decorators.RepeatNode.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Decorators.RepeatNode.html",
+          "hash": "AJPgzZWQWP3MrSeT6N491NYT3XEMYJqH+agYzXqsAac="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Decorators.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Decorators.html",
+          "hash": "DI6BwvWYshjqh1MXfxVXbpPTWYH4I8/UWbDEMxf9f0c="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.html",
+          "hash": "h3gcZrgn43wHWX5URJc08br6A1hH3RXPZRbNEJDUES0="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.html",
+          "hash": "DOMmDlaxxmVqXC3NqYkcfW70h+ALXryhvM5HydX3TYQ="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.State.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.State.html",
+          "hash": "VvHoZig+pl3p2RR5PSIPXIM5JG5Wm+p7FDzvVTqL4ds="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.html",
+          "hash": "Ex3aOjbB7iUeAN4ocZWfRKCZB01j8oDomc+8drJmNSQ="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Tests.RepeatNodeTest.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Tests.RepeatNodeTest.html",
+          "hash": "44lZpJBcW7ot9wxbibptRGRj/muLjkyAMELQEfFUAuE="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Tests.WaitNodeTest.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Tests.WaitNodeTest.html",
+          "hash": "ySYpu0P1C7os8ZYLDZEKB/gig1LmPHrBc/XqXEck1EU="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Tests.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Tests.html",
+          "hash": "LN8Vbwh1eO1GhHpKxaRZEpgtU6VAjyW4+rJH8MJu9PA="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Toc",
+      "source_relative_path": "api/toc.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/toc.html",
+          "hash": "nxl0yy32UzUGpUV0XqZ53MZ2Fqf2+9z6sNDcKD2LYJE="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "index.md",
+      "output": {
+        ".html": {
+          "relative_path": "index.html",
+          "hash": "TRVtH+k58Q1tmv+bkeW05xQmFABCMt8jEOxK0eoan1M="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "manual/manual-sample.md",
+      "output": {
+        ".html": {
+          "relative_path": "manual/manual-sample.html",
+          "hash": "upw+mUenffkNNHp3Za1ZjivCZMQrwcWludJEgc2vscI="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "log_codes": [
+        "EmptyTocItemName"
+      ],
+      "type": "Toc",
+      "source_relative_path": "manual/toc.yml",
+      "output": {
+        ".html": {
+          "relative_path": "manual/toc.html",
+          "hash": "I0NzEmcs3Uk1xa+I7vJ7g3GmHD9yvGEX3eewnp8gw60="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "resources/ExampleManual.png",
+      "output": {
+        "resource": {
+          "relative_path": "resources/ExampleManual.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "resources/ExampleScriptingApi.png",
+      "output": {
+        "resource": {
+          "relative_path": "resources/ExampleScriptingApi.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Toc",
+      "source_relative_path": "toc.yml",
+      "output": {
+        ".html": {
+          "relative_path": "toc.html",
+          "hash": "s7DJnbg5+GdBWDDYxybJ6HXx6sjR9dz1q4hiIHIaVA8="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    }
+  ],
   "incremental_info": [
     {
       "status": {
@@ -26,13 +458,20 @@
         "ConceptualDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 1,
+          "total_file_count": 2,
           "skipped_file_count": 0
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
           "total_file_count": 28,
+          "skipped_file_count": 0
+        },
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build",
+          "total_file_count": 0,
           "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
