--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "sitemap": {
     "fileOptions": {
       "api/*": {
+        "baseUrl": "https://labae.github.io/BehaviorTreeDoc/",
         "changefreq": "daily"
       }
     },
@@ -20,6 +21,354 @@
         }
       },
       "is_incremental": false
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.BehaviorTreeEditor.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.BehaviorTreeEditor.html",
+          "hash": "XJ7Mz1nCGihQYhccHeSYEx8gt9SrUmK4OWHBgnLHkDM="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.BehaviorTreeView.UxmlFactory.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.BehaviorTreeView.UxmlFactory.html",
+          "hash": "h7HOOXQS6oasY3oETzsTTyZJY+K89oWIWDoVnMCZ1f8="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.BehaviorTreeView.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.BehaviorTreeView.html",
+          "hash": "84NvBQGAtkpN/3tWW+y9gVtwaSwL65FL93KYdM/BvKE="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.InspectorView.UxmlFactory.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.InspectorView.UxmlFactory.html",
+          "hash": "DaYoufjZMWMZYw1Cj61FKbzcbI8mDgUY1jRMazyJw6s="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.InspectorView.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.InspectorView.html",
+          "hash": "VcxV0olCzgUweIV3fMBWK29ytBf+ug1dtrSS2duNXxw="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.NodeView.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.NodeView.html",
+          "hash": "a/6rNP6PMZ74fYR2BRzeE1+MSEehiuIwc94OYUifKFw="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.SplitView.UxmlFactory.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.SplitView.UxmlFactory.html",
+          "hash": "XQ3jB1pPxaVf1pWj75i89c9HINtnD/7zh/TmUHpkKqk="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.SplitView.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.SplitView.html",
+          "hash": "f+KA5/HqdIQmUiVAEU7HK2ZkR+fGCIZC+lZWcts/nkk="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Editor.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Editor.html",
+          "hash": "KPdRI/28/kDEEmOfuSiMiXsIcjAbTkvq7PxGiCsWAi8="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.BehaviorTreeAgent.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.BehaviorTreeAgent.html",
+          "hash": "0rkBhuAV/Yi/FvDtpc7fxMS0+daGtax2NDh6Wc5wo10="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.BehaviorTreeSO.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.BehaviorTreeSO.html",
+          "hash": "1cF0zwc/SvA9sKQIx8kScAXT9LybCDJtRtPRsYQRgjQ="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Actions.ActionNode.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Actions.ActionNode.html",
+          "hash": "gMIWyQhSCutrGDz06FtXkN+F1y/A6sKk/4NkHZndYaA="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Actions.DebugLogNode.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Actions.DebugLogNode.html",
+          "hash": "ZmAw9/uWca42pjWPnj5E9FIl3x5kOwTui1nX0vH4UnY="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Actions.WaitNode.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Actions.WaitNode.html",
+          "hash": "4GlY0/gt+iWJwVApznkFpzbexPgtBiLuqwEFNlGpH3g="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Actions.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Actions.html",
+          "hash": "78seWitvklPOB/HZVMhPxfYzX/y9LCpom4qm9QMYx2M="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Composites.CompositeNode.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Composites.CompositeNode.html",
+          "hash": "1U/fMxm/fl8x3WMWJmYm2Rj6Vm3untLX3waFEy47VZA="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Composites.SequencerNode.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Composites.SequencerNode.html",
+          "hash": "aKQ09FiNK+LkP6ApgK3bq2ae9ROTXmMcugEVMOsxOxE="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Composites.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Composites.html",
+          "hash": "baWoqjqzxDXtNGjoesdyk440JalVqUKDEC5D+wiLCYY="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Decorators.DecoratorNode.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Decorators.DecoratorNode.html",
+          "hash": "jKKWw3xH4wYc92srnAMBAJMW8TXW1ac52GRlfxXJzTw="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Decorators.RepeatNode.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Decorators.RepeatNode.html",
+          "hash": "yG8Baobz1swvqKacqCaw25naVaEEJrfDR6aUSx6qp2A="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Decorators.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.Decorators.html",
+          "hash": "DI6BwvWYshjqh1MXfxVXbpPTWYH4I8/UWbDEMxf9f0c="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.html",
+          "hash": "rOoprHWCvi74RvscZPExcEcBioxXaIVEvhXC7hTmb4Q="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.Nodes.html",
+          "hash": "DOMmDlaxxmVqXC3NqYkcfW70h+ALXryhvM5HydX3TYQ="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.State.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.State.html",
+          "hash": "VvHoZig+pl3p2RR5PSIPXIM5JG5Wm+p7FDzvVTqL4ds="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Runtime.Core.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Runtime.Core.html",
+          "hash": "Ex3aOjbB7iUeAN4ocZWfRKCZB01j8oDomc+8drJmNSQ="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Tests.RepeatNodeTest.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Tests.RepeatNodeTest.html",
+          "hash": "44lZpJBcW7ot9wxbibptRGRj/muLjkyAMELQEfFUAuE="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Tests.WaitNodeTest.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Tests.WaitNodeTest.html",
+          "hash": "ySYpu0P1C7os8ZYLDZEKB/gig1LmPHrBc/XqXEck1EU="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api/BehaviorTree.Scripts.Tests.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/BehaviorTree.Scripts.Tests.html",
+          "hash": "LN8Vbwh1eO1GhHpKxaRZEpgtU6VAjyW4+rJH8MJu9PA="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Toc",
+      "source_relative_path": "api/toc.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/toc.html",
+          "hash": "nxl0yy32UzUGpUV0XqZ53MZ2Fqf2+9z6sNDcKD2LYJE="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
     },
     {
       "type": "Conceptual",
@@ -88,7 +437,7 @@
       "output": {
         ".html": {
           "relative_path": "toc.html",
-          "hash": "5ebJzuRZcf1MxjrNFdqSMZcYSIK1dZp0jlcT3go77qk="
+          "hash": "s7DJnbg5+GdBWDDYxybJ6HXx6sjR9dz1q4hiIHIaVA8="
         }
       },
       "is_incremental": false,
@@ -110,6 +459,12 @@
           "can_incremental": false,
           "incrementalPhase": "build",
           "total_file_count": 2,
+          "skipped_file_count": 0
+        },
+        "ManagedReferenceDocumentProcessor": {
+          "can_incremental": false,
+          "incrementalPhase": "build",
+          "total_file_count": 28,
           "skipped_file_count": 0
         },
         "ResourceDocumentProcessor": {
