--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -298,6 +298,12 @@ references:
   commentId: T:BehaviorTree.Scripts.Runtime.Core.BehaviorTreeSO
   fullName: BehaviorTree.Scripts.Runtime.Core.BehaviorTreeSO
   nameWithType: BehaviorTreeSO
+- uid: BehaviorTree.Scripts.Runtime.Core.BehaviorTreeSO.Blackboard
+  name: Blackboard
+  href: api/BehaviorTree.Scripts.Runtime.Core.BehaviorTreeSO.html#BehaviorTree_Scripts_Runtime_Core_BehaviorTreeSO_Blackboard
+  commentId: F:BehaviorTree.Scripts.Runtime.Core.BehaviorTreeSO.Blackboard
+  fullName: BehaviorTree.Scripts.Runtime.Core.BehaviorTreeSO.Blackboard
+  nameWithType: BehaviorTreeSO.Blackboard
 - uid: BehaviorTree.Scripts.Runtime.Core.BehaviorTreeSO.Clone
   name: Clone()
   href: api/BehaviorTree.Scripts.Runtime.Core.BehaviorTreeSO.html#BehaviorTree_Scripts_Runtime_Core_BehaviorTreeSO_Clone
@@ -620,6 +626,12 @@ references:
   commentId: T:BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO
   fullName: BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO
   nameWithType: NodeSO
+- uid: BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.Blackboard
+  name: Blackboard
+  href: api/BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.html#BehaviorTree_Scripts_Runtime_Core_Nodes_NodeSO_Blackboard
+  commentId: F:BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.Blackboard
+  fullName: BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.Blackboard
+  nameWithType: NodeSO.Blackboard
 - uid: BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.Clone
   name: Clone()
   href: api/BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.html#BehaviorTree_Scripts_Runtime_Core_Nodes_NodeSO_Clone
@@ -633,6 +645,12 @@ references:
   isSpec: "True"
   fullName: BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.Clone
   nameWithType: NodeSO.Clone
+- uid: BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.Description
+  name: Description
+  href: api/BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.html#BehaviorTree_Scripts_Runtime_Core_Nodes_NodeSO_Description
+  commentId: F:BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.Description
+  fullName: BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.Description
+  nameWithType: NodeSO.Description
 - uid: BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.Execute
   name: Execute()
   href: api/BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.html#BehaviorTree_Scripts_Runtime_Core_Nodes_NodeSO_Execute
@@ -723,42 +741,42 @@ references:
   isSpec: "True"
   fullName: BehaviorTree.Scripts.Runtime.Core.Nodes.NodeSO.Update
   nameWithType: NodeSO.Update
-- uid: BehaviorTree.Scripts.Runtime.Core.State
-  name: State
-  href: api/BehaviorTree.Scripts.Runtime.Core.State.html
-  commentId: T:BehaviorTree.Scripts.Runtime.Core.State
-  fullName: BehaviorTree.Scripts.Runtime.Core.State
-  nameWithType: State
-- uid: BehaviorTree.Scripts.Runtime.Core.State.Abort
+- uid: BehaviorTree.Scripts.Runtime.Core.NodeState
+  name: NodeState
+  href: api/BehaviorTree.Scripts.Runtime.Core.NodeState.html
+  commentId: T:BehaviorTree.Scripts.Runtime.Core.NodeState
+  fullName: BehaviorTree.Scripts.Runtime.Core.NodeState
+  nameWithType: NodeState
+- uid: BehaviorTree.Scripts.Runtime.Core.NodeState.Abort
   name: Abort
-  href: api/BehaviorTree.Scripts.Runtime.Core.State.html#BehaviorTree_Scripts_Runtime_Core_State_Abort
-  commentId: F:BehaviorTree.Scripts.Runtime.Core.State.Abort
-  fullName: BehaviorTree.Scripts.Runtime.Core.State.Abort
-  nameWithType: State.Abort
-- uid: BehaviorTree.Scripts.Runtime.Core.State.Error
+  href: api/BehaviorTree.Scripts.Runtime.Core.NodeState.html#BehaviorTree_Scripts_Runtime_Core_NodeState_Abort
+  commentId: F:BehaviorTree.Scripts.Runtime.Core.NodeState.Abort
+  fullName: BehaviorTree.Scripts.Runtime.Core.NodeState.Abort
+  nameWithType: NodeState.Abort
+- uid: BehaviorTree.Scripts.Runtime.Core.NodeState.Error
   name: Error
-  href: api/BehaviorTree.Scripts.Runtime.Core.State.html#BehaviorTree_Scripts_Runtime_Core_State_Error
-  commentId: F:BehaviorTree.Scripts.Runtime.Core.State.Error
-  fullName: BehaviorTree.Scripts.Runtime.Core.State.Error
-  nameWithType: State.Error
-- uid: BehaviorTree.Scripts.Runtime.Core.State.Failure
+  href: api/BehaviorTree.Scripts.Runtime.Core.NodeState.html#BehaviorTree_Scripts_Runtime_Core_NodeState_Error
+  commentId: F:BehaviorTree.Scripts.Runtime.Core.NodeState.Error
+  fullName: BehaviorTree.Scripts.Runtime.Core.NodeState.Error
+  nameWithType: NodeState.Error
+- uid: BehaviorTree.Scripts.Runtime.Core.NodeState.Failure
   name: Failure
-  href: api/BehaviorTree.Scripts.Runtime.Core.State.html#BehaviorTree_Scripts_Runtime_Core_State_Failure
-  commentId: F:BehaviorTree.Scripts.Runtime.Core.State.Failure
-  fullName: BehaviorTree.Scripts.Runtime.Core.State.Failure
-  nameWithType: State.Failure
-- uid: BehaviorTree.Scripts.Runtime.Core.State.Running
+  href: api/BehaviorTree.Scripts.Runtime.Core.NodeState.html#BehaviorTree_Scripts_Runtime_Core_NodeState_Failure
+  commentId: F:BehaviorTree.Scripts.Runtime.Core.NodeState.Failure
+  fullName: BehaviorTree.Scripts.Runtime.Core.NodeState.Failure
+  nameWithType: NodeState.Failure
+- uid: BehaviorTree.Scripts.Runtime.Core.NodeState.Running
   name: Running
-  href: api/BehaviorTree.Scripts.Runtime.Core.State.html#BehaviorTree_Scripts_Runtime_Core_State_Running
-  commentId: F:BehaviorTree.Scripts.Runtime.Core.State.Running
-  fullName: BehaviorTree.Scripts.Runtime.Core.State.Running
-  nameWithType: State.Running
-- uid: BehaviorTree.Scripts.Runtime.Core.State.Success
+  href: api/BehaviorTree.Scripts.Runtime.Core.NodeState.html#BehaviorTree_Scripts_Runtime_Core_NodeState_Running
+  commentId: F:BehaviorTree.Scripts.Runtime.Core.NodeState.Running
+  fullName: BehaviorTree.Scripts.Runtime.Core.NodeState.Running
+  nameWithType: NodeState.Running
+- uid: BehaviorTree.Scripts.Runtime.Core.NodeState.Success
   name: Success
-  href: api/BehaviorTree.Scripts.Runtime.Core.State.html#BehaviorTree_Scripts_Runtime_Core_State_Success
-  commentId: F:BehaviorTree.Scripts.Runtime.Core.State.Success
-  fullName: BehaviorTree.Scripts.Runtime.Core.State.Success
-  nameWithType: State.Success
+  href: api/BehaviorTree.Scripts.Runtime.Core.NodeState.html#BehaviorTree_Scripts_Runtime_Core_NodeState_Success
+  commentId: F:BehaviorTree.Scripts.Runtime.Core.NodeState.Success
+  fullName: BehaviorTree.Scripts.Runtime.Core.NodeState.Success
+  nameWithType: NodeState.Success
 - uid: BehaviorTree.Scripts.Tests
   name: BehaviorTree.Scripts.Tests
   href: api/BehaviorTree.Scripts.Tests.html
